# cvise

./: CMakeLists.txt  INSTALL.md  conftest.py  cvise-cli.py  cvise.py
.github/workflows/: build-llvm-nightly.yml  build.yml
calc-include-depth/: CMakeLists.txt  main.cc
clang_delta/: ClangDelta.cpp  CommonRenameClassRewriteVisitor.h  CustomRewriter.h  RemoveNamespace.cpp  RemoveUnusedFunction.cpp  RenameClass.cpp  ReplaceDependentTypedef.cpp  ReplaceDerivedClass.cpp  ReplaceFunctionDefWithDecl.cpp  RewriteUtils.cpp  RewriteUtils.h  Transformation.cpp  Transformation.h  TransformationManager.cpp  TransformationManager.h  VectorToArray.cpp
clex/: clex.l  defs.h  driver.c  strlex.l
cvise/: CMakeLists.txt  cvise.py
cvise/calc-include-depth/: CMakeLists.txt  main.cc
cvise/inclusion-graph/: CMakeLists.txt
cvise/pass_groups/: all.json
cvise/passes/: abstract.py  balanced.py  clang_unused_code.py  clangbinarysearch.py  clanghints.py  clangincludegraph.py  comments.py  curly_cutter.py  delete-unused-files.sh  delete_file.py  fuzzy_lines.py  generic.py  hint_based.py  hintutil.py  ifs.py  inlineincludes.py  line_markers.py  lines.py  tree_sitter.py  treesitter.py
cvise/tests/: test_clangincludegraph.py  test_clex.py  test_clexhints.py  test_fileutil.py  test_hint.py  test_process.py  test_processpool.py  test_sigmonitor.py  test_test_manager.py  testabstract.py
cvise/tree_sit/: Makefile  main.cc
cvise/utils/: externalprograms.py  fileutil.py  folding.py  hint.py  misc.py  mplogging.py  process.py  processpool.py  sigmonitor.py  testing.py
debian/: changelog  control  copyright  cvise.1  rules  watch
delta/: topformflat.l
hint-tool/: Cargo.toml
hint-tool/src/: main.rs
hint_tool/: CMakeLists.txt  Cargo.toml
hint_tool/src/: main.rs
inclusion-graph/: CMakeLists.txt
tests/: test_cvise.py
tree-sitter-delta/: CMakeLists.txt  main.cc
treesitter_delta/: Main.cpp
